--- a/clientside/package.json
+++ b/clientside/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
+    "lucide-react": "^0.354.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
